--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -9,7 +9,25 @@
     <h3><span class="helpertxt">Varighet:</span> {{mission.dateStart | date: 'dd/MM/yyyy H:mm' }} - {{mission.dateEnd | date: 'dd/MM/yyyy H:mm' }} </h3><br>
     <p class="description">{{mission.description}}</p>
 </div>
-<h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">Status for mannskap</h2>
+
+<h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">Varslinger</h2>
+<table>
+    <thead>
+        <th>Utstedt</th>
+        <th>Beskjed</th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let alarm of mission.alarms">
+            <td>{{alarm.date | date: 'dd/MM/yyyy H:mm' }}</td>
+            <td>{{alarm.message}}</td>
+        </tr>
+
+    </tbody>
+</table>
+<button>Lag en ny varsling</button>
+
+<h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">Status for varslet mannskap</h2>
+
 
 <table>
     <thead>
@@ -31,4 +49,4 @@
     </tbody>
 </table>
 
-<button (click)="delete()" class="red">Slett aksjon</button>
+<button (click)="delete()" class="">Slett aksjon</button>
