--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -27,8 +27,7 @@
 <button>Lag en ny varsling</button>
 
 <h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">Status for varslet mannskap</h2>
-
-
+ 
 <table>
     <thead>
         <th>Navn</th>
@@ -38,12 +37,12 @@
         <th>Lokaliserbar?</th>
     </thead>
     <tbody>
-        <tr>
-            <td></td>
-            <td>-</td>
-            <td></td>
-            <td></td>
-            <td></td>
+        <tr *ngFor="let response of (missionResponses)">
+            <td>{{response.saruser.name}}</td>
+            <td>{{response.response ? 'Ja' : 'Nei'}}</td>
+            <td>{{response.date | date: 'dd/MM/yyyy H:mm' }}</td>
+            <td>{{response.comment}}</td>
+            <td>{{response.saruser.isTrackable ? 'Ja' : 'Nei'}}</td>
         </tr>
 
     </tbody>
