--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -48,11 +48,11 @@
                 <div class="helper-text">Denne beskjeden sendes som push-varsling sammen med varslingen.</div>
             </div>
 
-            <!-- <div class="form-group">
+             <div class="form-group">
                 <input id="ums" type="checkbox" name="ums">
                 <label for="ums">Varsling via UMS? </label>
                 <div class="helper-text"></div>
-            </div> -->
+            </div> 
             <h3>Velg medlemmer som skal varsles</h3>
             <!-- <p>Medlemmer som ikke har SAR-status vil bli varslet via UMS</p> -->
 
