--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -20,13 +20,16 @@ body { background:#f7f7f7; font-family: "MyriadPro-Regular";}
 #content a { color: rgba(237, 28, 36,1); border-bottom: 2px solid rgba(237, 28, 36,1); }
 #content a:hover, #content a:active, #content a:visited { text-decoration: none; border-bottom: 0; }
 #content a:active { transform:scale(0.95,0.95); }
-/* top */
 
+
+
+/* top */
 #top { background: #f1f2f3; height: 100px;}
 #logo { display: block; float: left; padding:2em 0; }
 #logo > img { width: 150px;}
 #maske {display: none; background-color: rgba(255,255,255, 0.85); left: 0; bottom: 0; right: 0; top: 0; margin: auto; overflow-y: scroll; position: fixed; z-index: 10; }
 
+/* toast */
 .toast-container {display: none; cursor: pointer; opacity: 0; transition: opacity 400ms ease-in; width: 100%; position: fixed; left: 0; bottom: 0; right: 0; z-index: 9999; text-align: center; padding: 2em 0; font-size: 1.1em;}
 .toast-container span { font-size:3em; display:block;   padding-bottom: .2em; }
 
@@ -98,8 +101,16 @@ table td, table th { padding: 1em; width: 150px;}
 table.missions th:nth-child(1), table.missions td:nth-child(1) { width: 10px;}
 
 
+/* filter buttons */
+.filter-button, .filter-button label, .filter-button input { display: block; float: left;}
+.filter-button { overflow: hidden; position: relative; text-align: center;  min-width: 150px;  padding: 1.5em 0.5em; border-radius: 5px; margin-right: 1em;}
+.filter-button input { position: absolute; left: 0; width: 20%;  }
+.filter-button label { transition: 0.2s ease all; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: #ffffff; width: 100%; height: 100%; font-size: 1.1em; line-height: 2.7em;}
+input:checked + label, .filter-button label:hover{ background: #333; color: #fff;}
 
-/* filter input */
+
+
+/* filter search */
 .searchinput {width: 100%; font-size: 2em; border: 0; padding-bottom: 2px; border-bottom: 2px solid #333; background-color: transparent; margin: 1em 0; }
 .searchinput:focus {outline: none; border: none; border-bottom:2px solid #333; -webkit-box-shadow: none !important;-moz-box-shadow: none !important; box-shadow: none !important; }
 
