--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -106,7 +106,7 @@ table.missions th:nth-child(1), table.missions td:nth-child(1) { width: 10px;}
 .filter-button { overflow: hidden; position: relative; text-align: center;  min-width: 150px;  padding: 1.5em 0.5em; border-radius: 5px; margin-right: 1em;}
 .filter-button input { position: absolute; left: 0; width: 20%;  }
 .filter-button label { transition: 0.2s ease all; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: #ffffff; width: 100%; height: 100%; font-size: 1.1em; line-height: 2.7em;}
-input:checked + label, .filter-button label:hover{ background: #333; color: #fff;}
+.filter-button input:checked + label, .filter-button label:hover{ background: #333; color: #fff;}
 
 
 
