Display all missions on init

--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -5,11 +5,11 @@
 
 <div class="filter-buttons">
     <div class="filter-button">
-        <input type="radio" name="filter-missions" value="all" id="all" (click)="changefilterWhichMissions('all')">
+        <input type="radio" name="filter-missions" value="all" id="all" (click)="changefilterWhichMissions('all')" checked>
         <label for="all">Vis alle</label>
     </div>
     <div class="filter-button">
-        <input type="radio" name="filter-missions" value="active" id="active" (click)="changefilterWhichMissions('active')" checked>
+        <input type="radio" name="filter-missions" value="active" id="active" (click)="changefilterWhichMissions('active')" >
         <label for="active">Vis aktive</label>
     </div>
     <div class="filter-button">
