--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <toast></toast>
+<modal></modal>
 <div id="maske" class="animated fadeIn" [class.show]="showMobileMenu"></div>
 <div id="wrapper">
     <header  id="top">
