--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -2,16 +2,17 @@
 
 <div class="mission-active-info">
     <h3><span class="helpertxt">Status:</span> {{mission.isActive ? 'Aktiv' : 'Avsluttet'}}</h3><br>
-    <p *ngIf="mission.isEmergency"><span class="icon pe-7s-attention"></span> Nødsituasjon</p>
-    
+    <h3 *ngIf="mission.isEmergency"><span class="helpertxt">Nødsituasjon:</span> Ja</h3><br>
+
     <h3 *ngIf="mission.creator"><span class="helpertxt">Opprettet av:</span> {{mission.creator.name}}</h3><br>
-    <h3 *ngIf="mission.meetingPoint"><span class="helpertxt">Oppmøtested:</span> <a href="http://maps.google.com/?q={{mission.meetingPoint.lat}},{{mission.meetingPoint.lng}}" target="_blank"> {{mission.meetingPointNicename}}</a></h3>
-    
+    <h3 *ngIf="mission.meetingPoint"><span class="helpertxt">Oppmøtested:</span> <a href="http://maps.google.com/?q={{mission.meetingPoint.lat}},{{mission.meetingPoint.lng}}"
+            target="_blank"> {{mission.meetingPointNicename}}</a></h3>
+
     <h3><span class="helpertxt">Startet:</span> {{mission.dateStart | date: 'dd/MM/yyyy H:mm' }}</h3><br>
     <h3 *ngIf="mission.dateEnd"><span class="helpertxt">Avsluttet:</span> {{mission.dateEnd | date: 'dd/MM/yyyy H:mm' }} </h3><br>
     <p class="description">{{mission.description}}</p>
 
-<button *ngIf="mission.isActive" (click)="endMission()" class="">Avslutt aksjonen</button>
+    <button *ngIf="mission.isActive" (click)="endMission()" class="">Avslutt aksjonen</button>
 </div>
 
 <h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">Varslinger</h2>
@@ -32,32 +33,32 @@
 
 
 <section>
-<h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">
-    Status for varslet mannskap
-</h2>
- 
-<table>
-    <thead>
-        <th>Navn</th>
-        <th>Stiller</th>
-        <th>Dato besvart</th>
-        <th>Beskjed</th>
-        <th>Lokaliserbar?</th>
-    </thead>
-    <p *ngIf="missionResponses && missionResponses.length == 0" style="font-style:italic; padding: 1em 0;">
-   <span *ngIf="mission.isActive"> Ingen har respondert på utkallingen enda</span>
-   <span *ngIf="!mission.isActive"> Ingen respondenter</span>
-        </p>
-    <tbody>
-        <tr *ngFor="let response of (missionResponses)">
-            <td>{{response.saruser.name}}</td>
-            <td>{{response.response ? 'Ja' : 'Nei'}}</td>
-            <td>{{response.date | date: 'dd/MM/yyyy H:mm' }}</td>
-            <td>{{response.comment}}</td>
-            <td>{{response.saruser.isTrackable ? 'Ja' : 'Nei'}}</td>
-        </tr>
+    <h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">
+        Status for varslet mannskap
+    </h2>
 
-    </tbody>
-</table>
+    <table>
+        <thead>
+            <th>Navn</th>
+            <th>Stiller</th>
+            <th>Dato besvart</th>
+            <th>Beskjed</th>
+            <th>Lokaliserbar?</th>
+        </thead>
+        <p *ngIf="missionResponses && missionResponses.length == 0" style="font-style:italic; padding: 1em 0;">
+            <span *ngIf="mission.isActive"> Ingen har respondert på utkallingen enda</span>
+            <span *ngIf="!mission.isActive"> Ingen respondenter</span>
+        </p>
+        <tbody>
+            <tr *ngFor="let response of (missionResponses)">
+                <td>{{response.saruser.name}}</td>
+                <td>{{response.response ? 'Ja' : 'Nei'}}</td>
+                <td>{{response.date | date: 'dd/MM/yyyy H:mm' }}</td>
+                <td>{{response.comment}}</td>
+                <td>{{response.saruser.isTrackable ? 'Ja' : 'Nei'}}</td>
+            </tr>
+
+        </tbody>
+    </table>
 </section>
 <button (click)="delete()" class="">Slett denne aksjon</button>
