--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <toast></toast>
 <modal></modal>
-<div id="maske" class="animated fadeIn" [class.show]="showMobileMenu"></div>
+<spinner></spinner>
+<div id="menymaske" class="maske animated fadeIn" [class.show]="showMobileMenu"></div>
 <div id="wrapper">
     <header  id="top">
         <div class="container">
@@ -36,6 +37,7 @@
         </div>
     </header>
     <div class="container" id="content">
+        
         <router-outlet></router-outlet>
     </div>
 </div>
