--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group">
                 <label for="date-start" class="control-label">Startdato</label>
-                <input [(ngModel)]="mission.dateStart" id="date-start" name="date-start" type="datetime-local">
+                <input [(ngModel)]="mission.dateStart" class="flatpickr" id="date-start" name="date-start" type="datetime-local">
             </div>
             <div class="form-group">
                 <label for="meetingpoint" class="control-label">Oppmøtested</label>
@@ -44,13 +44,8 @@
                 <div class="helper-text">Denne beskjeden sendes som push-varsling sammen med varslingen.</div>
             </div>
 
-             <div class="form-group">
-                <input id="ums" type="checkbox" name="ums">
-                <label for="ums">Varsling via UMS? </label>
-                <div class="helper-text"></div>
-            </div> 
             <h3>Velg medlemmer som skal varsles</h3>
-            <!-- <p>Medlemmer som ikke har SAR-status vil bli varslet via UMS</p> -->
+            <p>Bare medlemmer som har SAR-Status kan varsles.</p>
 
             <people></people>
 
