Added AlarmComponent and assigned it as a toggled ViewChild of an active Mission

--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -29,7 +29,8 @@
 
     </tbody>
 </table>
-<button *ngIf="mission.isActive">Lag en ny varsling</button>
+<button *ngIf="mission.isActive" (click)="toggleAlarm()">Lag en ny varsling</button>
+<alarm [mission]="mission"></alarm>
 
 
 <section>
