Fixed login issues + added expense-component-list

--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -62,4 +62,17 @@
         </tbody>
     </table>
 </section>
+
+
+
+
+
+<section>
+    <h2 style="margin-top: 2em; border-bottom: 2px solid #acacac">
+        Registrerte utgifter for deltakere
+    </h2>
+
+<expenses [mission]="mission"></expenses>
+</section>
+
 <button (click)="delete()" class="">Slett denne aksjon</button>
