--- a/src/app/missions/mission-list.component.html
+++ b/src/app/missions/mission-list.component.html
@@ -27,7 +27,7 @@
     <p *ngIf="!mission.isActive" style="color: rgba(0,0,0,0.5); text-transform: uppercase;">Avsluttet</p>
     <h3><span class="pe-7s-map-marker"></span>{{mission.meetingPointNicename}}</h3>
 
-    <h3><span class="pe-7s-date"></span>Startet: {{mission.dateStart | date: 'dd/MM/yyyy H:mm' }}</h3>
+    <h3><span class="pe-7s-date"></span>Startdato: {{mission.dateStart | date: 'dd/MM/yyyy H:mm' }}</h3>
     <h3 *ngIf="mission.dateEnd"><span class="pe-7s-date"></span>Avsluttet: {{mission.dateEnd | date: 'dd/MM/yyyy H:mm' }} </h3>
     <p class="description">{{mission.description}}</p>
 </div>
