--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -212,6 +212,10 @@ table.missions th:nth-child(1), table.missions td:nth-child(1) { width: 10px;}
 
 /* media queries */
 
+@media (max-width: 1200px) {
+  #menu > li > a { padding: 1.4em;}
+}
+
 @media (max-width: 1024px) { 
 	#menu #close { display: block;}
 	#menu { display: none; bottom: 0; display: none; height: 100%; left: 0; position: fixed; right: 0; top: 0; width: 100%; padding: 3em 0; z-index:9999;} #menu-toggle { display:block;}
