--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -3,45 +3,48 @@
 <article>
     <div *ngIf="mission" class="animated fadeIn">
         <h2>{{mission.title}}</h2>
-        <form>
+        <form (ngSubmit)="f.form.valid && save()" #f="ngForm" novalidate method="post">
             <div class="form-sub-heading" data-number="1">
                 <h3>Info</h3>
             </div>
-            <div class="form-group">
-                <label for="name" class="control-label">Navn</label>
-                <input [(ngModel)]="mission.title" class="formcontrol" type="text" name="name" placeholder="">
+
+
+            <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !title.valid }">
+                <label for="title" class="control-label">Tittel</label>
+                <input [(ngModel)]="mission.title" class="formcontrol" type="text" name="title" id="title" placeholder="" required #title="ngModel">
+                <div *ngIf="f.submitted && !title.valid" class="help-block animated fadeIn">Tittel må fylles ut</div>
             </div>
-            <div class="form-group">
-                <label for="date-start" class="control-label">Startdato</label>
-                <input [(ngModel)]="mission.dateStart" class="flatpickr" id="date-start" name="date-start" type="datetime-local">
+
+
+
+            <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !dateStart.valid }">
+                <label for="dateStart" class="control-label">Startdato</label>
+                <input [(ngModel)]="mission.dateStart" id="dateStart" name="dateStart" type="datetime-local" required #dateStart="ngModel">
+                <div *ngIf="f.submitted && !dateStart.valid" class="help-block animated fadeIn">Startdato/klokkeslett må fylles ut</div>
             </div>
-            <div class="form-group">
-                <label for="meetingpoint" class="control-label">Oppmøtested</label>
+
+
+            <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !meetingPoint.valid }">
+                <label for="meetingPoint" class="control-label">Oppmøtested</label>
                 <input [(ngModel)]="mission.meetingPointNicename" name="meetingPointNicename" id="geo_search" class="controls" type="text"
-                    placeholder="Skriv inn et sted...">
+                    placeholder="Skriv inn et sted..." required #meetingPoint="ngModel">
+                <div *ngIf="f.submitted && !meetingPoint.valid" class="help-block animated fadeIn">Oppmøtested må velges</div>
             </div>
             <map-picker [mission]="mission"></map-picker>
-
 
             <div class="form-group">
                 <input [(ngModel)]="mission.isEmergency" id="emergency" type="checkbox" name="emergency">
                 <label for="emergency">Nødsituasjon? </label>
                 <div class="helper-text">Ved nødsituasjonerer vil alle bli varslet uavhengig av tilgjengelighet</div>
             </div>
-            <div class="form-group">
+
+            <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !description.valid }">
                 <label for="description" class="control-label">Beskrivelse</label>
-                <textarea [(ngModel)]="mission.description" class="form-control" name="description"></textarea>
+                <textarea [(ngModel)]="mission.description" class="form-control" name="description" required #description="ngModel"></textarea>
+                <div *ngIf="f.submitted && !description.valid" class="help-block animated fadeIn">Aksjonen må ha en beskrivelse</div>
             </div>
             <div class="form-sub-heading" data-number="2">
                 <h3>Varsling</h3>
-                <h4 style="font-style:italic; padding: 1.5em 0; font-family: 'MyriadPro-Regular'; line-height: 1.8em;">En aksjon kan ha flere varslinger. Disse vil dukke opp som push-varslinger hos de som har SAR-Status innstallert.
-                    Flere varslinger kan sendes mens aksjonen pågår</h4>
-            </div>
-
-            <div class="form-group" *ngIf="alarm">
-                <label for="description" class="control-label">Melding</label>
-                <textarea [(ngModel)]="alarm.message" class="form-control" name="message"></textarea>
-                <div class="helper-text">Denne beskjeden sendes som push-varsling sammen med varslingen.</div>
             </div>
 
             <h3>Velg medlemmer som skal varsles</h3>
@@ -50,9 +53,14 @@
             <people></people>
 
             <div class="form-group">
-                <button type="submit" (click)="save()">Opprett aksjon</button>
+                <!--<button type="submit" (click)="save()">Opprett aksjon</button> -->
+                <button type="submit" name="save">Opprett aksjon</button>
                 <button (click)="cancel()">Avbryt</button>
-                <!--    <button (click)="modal.open()" [class.hidden]="isAddMode()">Slett</button> -->
+            </div>
+
+              <div *ngIf="f.submitted" class="form-group error" [ngClass]="{ 'has-error': f.submitted }">
+                Noen av feltene er ikke riktig fylt ut. Se gjennom skjemaet
+
             </div>
         </form>
     </div>
