--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -61,7 +61,7 @@
                     <span *ngIf="response.saruser?.isTrackable">
 
                         
-                         <a *ngIf="response.tracking?.geopoint"href="http://maps.google.com/?q={{response.tracking.geopoint.lat}},{{response.tracking.geopoint.lng}}"
+                         <a *ngIf="response.tracking?.geopoint" href="http://maps.google.com/?q={{response.tracking.geopoint.lat}},{{response.tracking.geopoint.lng}}"
             target="_blank">Åpne i kart</a>. <br>Registrert: {{response.tracking?.date | date: 'dd/MM/yyyy H:mm'}}
 <!--Distanse:
  {{computeDistanceBetweenLocations(response.tracking.geopoint, mission.meetingPoint)}} -->
@@ -89,10 +89,9 @@
     <expenses [mission]="mission"></expenses>
 </section>
 
-<!--
-<tracking *ngIf="mission.isActive">
+
+<tracking *ngIf="mission.isActive && missionResponses && missionResponses.length > 0" [missionResponses]="missionResponses">
 </tracking>
 
--->
 
 <button (click)="delete()" class="">Slett denne aksjon</button>
