--- a/src/app/missions/mission-active.component.html
+++ b/src/app/missions/mission-active.component.html
@@ -44,7 +44,7 @@
             <th>Stiller</th>
             <th>Dato besvart</th>
             <th>Beskjed</th>
-            <th>Lokasjon</th>
+            <th>Sporbar?</th>
         </thead>
         <p *ngIf="missionResponses && missionResponses.length == 0" style="font-style:italic; padding: 1em 0;">
             <span *ngIf="mission.isActive"> Ingen har respondert på utkallingen enda</span>
@@ -56,23 +56,9 @@
                 <td>{{response.response ? 'Ja' : 'Nei'}}</td>
                 <td>{{response.date | date: 'dd/MM/yyyy H:mm' }}</td>
                 <td>{{response.comment}}</td>
-                <td>
-
-                    <span *ngIf="response.saruser?.isTrackable">
-
-                        
-                         <a *ngIf="response.tracking?.geopoint" href="http://maps.google.com/?q={{response.tracking.geopoint.lat}},{{response.tracking.geopoint.lng}}"
-            target="_blank">Åpne i kart</a>. <br>Registrert: {{response.tracking?.date | date: 'dd/MM/yyyy H:mm'}}
-<!--Distanse:
- {{computeDistanceBetweenLocations(response.tracking.geopoint, mission.meetingPoint)}} -->
-                    </span>
-
-
-                    <span>{{!response.saruser?.isTrackable ? 'Ikke sporbar' : ''}}</span>
-
+                <td>{{!response.saruser?.isTrackable ? 'Nei' : 'Ja (se kart)'}}
                 </td>
             </tr>
-
         </tbody>
     </table>
 </section>
