--- a/src/app/tracking/tracking.component.html
+++ b/src/app/tracking/tracking.component.html
@@ -1,5 +1,5 @@
 <br><br>
 <h4>Kartet oppdateres kontinuerlig med nye plasseringer for mannskap med aktivert sporing. </h4>
 <div class="form-group">
-    <div id="map"></div>
+    <div id="trackingmap"></div>
 </div>
