--- a/src/app/people/people-list.component.html
+++ b/src/app/people/people-list.component.html
@@ -1,6 +1,6 @@
 <filter-text (changed)="filterChanged($event)">
 </filter-text>
-
+<div style="overflow-x: auto">
 <table>
     <thead>
         <th>Velg</th>
@@ -25,3 +25,4 @@
 
     </tbody>
 </table>
+</div>
