--- a/src/app/missions/mission-single.component.html
+++ b/src/app/missions/mission-single.component.html
@@ -54,8 +54,10 @@
 
             <h3>Velg medlemmer som skal varsles</h3>
             <p>Bare medlemmer som har SAR-Status kan varsles.</p>
-
-            <people></people>
+            <div class="form-group" [ngClass]="{ 'has-error': f.submitted && peopleList.selectedPeople.length == 0 }">
+                <div *ngIf="f.submitted && peopleList.selectedPeople.length == 0" class="help-block animated fadeIn">Du må velge noen å sende ut varsling til</div>
+                <people></people>
+            </div>
 
             <div class="form-group">
                 <!--<button type="submit" (click)="save()">Opprett aksjon</button> -->
