--- a/src/app/alarms/alarm.component.html
+++ b/src/app/alarms/alarm.component.html
@@ -9,8 +9,8 @@
                 <div *ngIf="f.submitted && !message.valid" class="help-block">Beskjed må fylles ut</div>
             </div>
             <div class="form-group">
-                <button type="submit">Opprett varsling</button>
-                <button (click)="cancel()">Avbryt</button>
+                <button type="submit"><i class="fa fa-plus"></i>Opprett varsling</button>
+                <button (click)="cancel()"<i class="fa fa-remove"></i>>Avbryt</button>
             </div>
         </form>
     </div>
