--- a/src/app/alarms/alarm.component.html
+++ b/src/app/alarms/alarm.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="form-group">
                 <button type="submit"><i class="fa fa-plus"></i>Opprett varsling</button>
-                <button (click)="cancel()"<i class="fa fa-remove"></i>>Avbryt</button>
+                <button (click)="cancel()"><i class="fa fa-remove"></i>Avbryt</button>
             </div>
         </form>
     </div>
