--- a/src/app/blocks/spinner/spinner.component.css
+++ b/src/app/blocks/spinner/spinner.component.css
@@ -5,7 +5,7 @@
   transform: translate(-50%,0);
   top: 30%; 
 
-  padding: 3em 7em;
+  padding: 3em 0;
   z-index: 2;
   font-size: 1.2em;
   border-radius: 4px;
