--- a/src/app/assets/styles.css
+++ b/src/app/assets/styles.css
@@ -237,7 +237,7 @@ table.missions th:nth-child(1), table.missions td:nth-child(1) { width: 10px;}
 
 
 /*** Mission-list ***/
-.mission { min-height: 350px; background: #fff; border-radius: 3px; padding: 1.65em; width: 30%; float: left; margin: 1em 1em 1em 0; position: relative; transition: 0.2s ease all; cursor: pointer; }
+.mission { min-height: 350px; height: 220px; overflow:hidden; background: #fff; border-radius: 3px; padding: 1.65em; width: 30%; float: left; margin: 1em 1em 1em 0; position: relative; transition: 0.2s ease all; cursor: pointer; }
 .mission:hover { /*background: rgba(237, 28, 36, 0.75);*/ background: #333; color: #fefefe; transform: scale(1.03,1.03); }
 .mission:active { transform:scale(0.95,0.95) }
 .mission:hover >.emergency { }
